tried to fix top nav alignment, did not work

--- a/styles.css
+++ b/styles.css
@@ -40,7 +40,7 @@ header nav div button {
 
 .nav-container {
 	display: flex;
-	justify-content: speace-between;
+	justify-content: space-between;
 	align-items: center;
 }
 
@@ -76,12 +76,15 @@ button {
 	display: inline-flex;
 	align-items: center;
 	justify-content: center;
+	font-size: 16px;
+	line-height: 1;
 }
 
 .material-symbols-rounded {
   display: inline-flex;
   align-items: center;
   justify-content: center;
+	font-size: 24px;
   margin-right: 8px;
   vertical-align: middle;
 }
